python-sqlfuse (0.6.9-1) unstable; urgency=low

  * Don't save inode data immediately after closing.
    (NFS opens/closes around every file access!)

 -- Matthias Urlichs <smurf@smurf.noris.de>  Tue, 31 May 2011 11:38:34 +0200

python-sqlfuse (0.6.8-1) unstable; urgency=low

  * Add code to create TODO records retroactively (for delayed file copying).

 -- Matthias Urlichs <smurf@smurf.noris.de>  Sat, 28 May 2011 15:02:14 +0200

python-sqlfuse (0.6.7-1) unstable; urgency=low

  * return some file system errors in-line (speedup)
  * remember missing xattrs

 -- Matthias Urlichs <smurf@smurf.noris.de>  Mon, 09 May 2011 11:21:08 +0200

python-sqlfuse (0.6.6-1) unstable; urgency=low

  * Fix cache trim on short file

 -- Matthias Urlichs <smurf@data.intern.smurf.noris.de>  Sun, 08 May 2011 22:19:52 +0200

python-sqlfuse (0.6.5-1) unstable; urgency=low

  * Fix file copying. Again. *Sigh*.

 -- Matthias Urlichs <smurf@smurf.noris.de>  Sun, 08 May 2011 17:52:05 +0200

python-sqlfuse (0.6.4-1) unstable; urgency=low

  * Fix background jobs' immediate repetition.

 -- Matthias Urlichs <smurf@smurf.noris.de>  Sat, 07 May 2011 08:32:00 +0200

python-sqlfuse (0.6.3-1) unstable; urgency=low

  * Fix (re)connection issues

 -- Matthias Urlichs <smurf@smurf.noris.de>  Sat, 07 May 2011 07:20:45 +0200

python-sqlfuse (0.6.2-1) unstable; urgency=low

  * Limit the number of simultaneously open files to 500

 -- Matthias Urlichs <smurf@smurf.noris.de>  Fri, 06 May 2011 21:33:21 +0200

python-sqlfuse (0.6.1-1) unstable; urgency=low

  * Rename inode.nodeid ⇒ inode.inum
  * Rename .filesystem, .tree ⇒ .fs

 -- Matthias Urlichs <smurf@smurf.noris.de>  Fri, 06 May 2011 11:31:39 +0200

python-sqlfuse (0.6.0-1) unstable; urgency=low

  * Completely reorganized updating from the event log.

 -- Matthias Urlichs <smurf@smurf.noris.de>  Thu, 05 May 2011 14:16:25 +0200

python-sqlfuse (0.5.25-1) unstable; urgency=low

  * make inode flushing on shutdown actually work
  * cleanup